--- a/docs/thesis/discussion.tex
+++ b/docs/thesis/discussion.tex
@@ -56,7 +56,15 @@ There is thus no clear way to 'discount' routing in a balancing direction.
 
 It is further unclear how much immediate balance will matter for routing success and other solutions have been proposed to levitate this pressure point. E.g René Pickhardt JIT-routing~\cite{pickard:jit} and branching out utilizing multiple paths to fulfill liquidity needs.   
 
-
 \section{Future work}
 
-As 
+\subsection{Protocol changes}
+
+As the lightning network protocol is still under development and small changes in the Bitcoin protocol may change the dynamics of which the nodes operate. E.g. It seem probably that funding channels by both parties will be available in the near future. \\
+
+It is difficult to say how universal these results are although surely many strategies suggested herein will still be successful with protocol changes.
+
+The simulation must thus stay 
+
+
+
