--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -155,7 +155,7 @@
 	  		\vspace{10mm}
 	  		\begin{large}
 	  			\begin{tabular}{ll}
-	  				\textbf{Name} & John-John Markstedt \\
+	  				\textbf{Name} & John-John Markstedt* \\
 	  				\textbf{Cinnober Supervisor} & Oskar Janson \\
 	  				\textbf{University Supervisor} & Jerry Eriksson \\
 	  				\textbf{Examinor} & Henrik Björklund \\
@@ -163,6 +163,8 @@
 	  			\vfill
 	  			\vfill
 	  		\end{large}
+	  		
+	  		\scriptsize{* whom correspondence should be addressed. E-mail: john-john@markstedts.org}
 	  		
 	  	\end{center}
     \end{titlepage}
