--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -833,6 +833,7 @@ year = "",
 	note = {},
 	year = "",
 	}
+
 @article{
 	erdos:renyi:random:graphs,
 	author = {Erdős, Paul and Rényi, Albért}, 
@@ -873,6 +874,21 @@ year = "",
 	howpublished = {
 		\url{http://barabasi.com/f/623.pdf}
 	}
+}
+
+@article{
+	merton:matthew:effect,
+	title = "The Matthew Effect in Science",
+	author = {Merton, Robert K.},
+	journal = "Science",
+	volume = "186",
+	number = "3810",
+	pages = "56-63",
+	year = "1968",
+	month = "January",
+	day = "5",
+	howpublished = "http://www.garfield.library.upenn.edu/merton/matthew1.pdf",
+
 }
 
 @article{
