--- a/docs/thesis/abstract.tex
+++ b/docs/thesis/abstract.tex
@@ -1,16 +1,6 @@
 \centering \textbf{Abstract}
 
-In payment channel networks, such as the Bitcoin native Lightning Network, the routing
-nodes receives a fee as compensation for displaced liquidity, time value of money and operational
-costs. Currently this fee is mostly manually set procuring sub optimal profits to
-the node operator. The network dynamics may be modeled as a graph and each node as an actor
-utilizing strategies in fee price setting, preferential attachment, timing, allocation and
-funding akin to Game Theodoric models. Further assuming rational actors and strategy propagation is  
-proportional to population suggest similar methodology to Evolutionary Game Theory where
-a strategy's fitness will emerge as a fraction of population size.
+In payment channel networks, such as the Bitcoin native Lightning Network, the routing nodes receives a fee as compensation for displaced liquidity, time value of money and operational costs. Currently this fee is mostly manually set procuring sub optimal profits to the node operator. The network dynamics may be modeled as a graph and each node as an actor utilizing strategies in fee price setting, preferential attachment, timing, allocation and funding akin to Game Theoretic models. Further assuming rational actors and strategy propagation is proportional to population suggest similar methodology to Evolutionary Game Theory where a strategy's fitness will emerge as a fraction of population size. 
 
-A simulation study was performed where strategies were played against each other to find emergent equilibria under
-competitive market pressure. Where such equilibrium may lie have further consequences for the network in form of 
-total throughput, routing cost and robustness. 
-This study suggest ... strategies and a robust network topology with short 
-average paths will emerge from free competition.
+A simulation study was performed where strategies were played against each other to find emergent equilibrea under competitive marke pressure. Where such equilibrium may lie have further consequences for the network in form of total throughput, routing cost and robustness. This study suggest ... strategies and a robust network topology with short average paths will emerge from free competition.
+
