--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -60,7 +60,7 @@
 		\vbox{\copy2\box0}\box2}}
 
 %\def\mytitle{Routing Fee Estimation in Lightning Network}
-\def\mytitle{Emergent Routing Policies in the Lightning Network}
+\def\mytitle{Emergent Routing Strategies in the Lightning Network}
 
 % Routing Fee Estimation in Bidirectional payment channel networks
 % Non Eploitable pricing of liqid channels in the lightning network
