--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -851,7 +851,7 @@ year = "",
 
 @article{
 	barabasi:albert:emergent:scaling,
-	author = {Barabasi, Albert-Lászlo and Albert, Réka}, 
+	author = {Barabási, Albert-László and Albert, Réka}, 
 	title = "Emergence of Scaling in Random Networks",
 	journal = "Science",
 	volume =  "286",
@@ -866,13 +866,28 @@ year = "",
 
 @article{
 	barabasi:scale:free,
-	author = {Barabasi, Albert-Lászlo},
+	author = {Barabási, Albert-László},
 	title = "Network Science The Scale Free Property",
 	day = "09", 
 	month = "September",
 	year = "2014",
 	howpublished = {
 		\url{http://barabasi.com/f/623.pdf}
+	}
+}
+
+@article{
+	barabasi:decade:beyond,
+	author = {Barabási, Albert-László},
+	title = "Scale-Free Networks: A Decade and Beyond",
+	journal = "Science",
+	volume = "325",
+	pages = "412-413",
+	day = "24", 
+	month = "July",
+	year = "2009",
+	howpublished = {
+		\url{http://barabasi.com/f/303.pdf}
 	}
 }
 
@@ -1069,6 +1084,52 @@ year = "",
 	},
 	note = { }
 }
+
+@article{
+	turner:chao:prisoners:dilemma,
+	author = { Turner, Paul E. and Chao, Lin},   
+	title = { Prisoner's dilemmain an RNA virus },
+	journal = { Nature },
+	volume = {398},
+	pages = {441-443},
+	year = {1999},
+	month = "April",
+	day = "1",
+	howpublished = {
+		\url{https://turnerlab.yale.edu/sites/default/files/turner_chao_1999.pdf}
+	},
+	note = { }
+}
+
+@article{
+	nowak:sigmund:phage,
+	author = { Nowak, Martin A. and Sigmund, Karl },   
+	title = { Phage-lift for game theory },
+	journal = { Nature },
+	volume = {398},
+	pages = {441-443},
+	year = {1999},
+	month = "April",
+	day = "1",
+	howpublished = {
+		\url{http://ped.fas.harvard.edu/files/ped/files/nature99a_0.pdf}
+	},
+	note = { }
+}
+
+
+@article{
+	bell:logonormal,
+	author = { Bell, Michael and Perera, Supun and Piraveenan, Mahendrarajah and Bliemer, Michiel and Latty, Tanya and Reid, Chris },   
+	title = { Network growth models: A behavioural basis for attachment proportional to fitness },
+	year = {2008},
+	howpublished = {
+	\url{https://arxiv.org/pdf/1702.04046.pdf}
+	},
+	note = { }
+}
+
+
 
 @book{
 	easly:kleinberg:network:crowds:markets,
