private, node bch graph

--- a/docs/thesis/discussion.tex
+++ b/docs/thesis/discussion.tex
@@ -17,7 +17,7 @@ Both use the same amount of liquidity, 3,500,000 satoshis each, but they start f
 	\centering
 	\includegraphics[width=7cm]{images/protocol_upgrade.png}
 	
-	\label{fig:xt_nodes}
+	\label{fig:upgrade}
 	\hspace*{2mm} 	
 \end{figure}
 
@@ -36,7 +36,7 @@ Each satoshi in the channel could be seen as a different bracket, with a differe
 	\hspace*{-0.5cm}
 	\centering
 	\includegraphics[width=9cm]{images/fee_scheme.png}
-	\label{fig:xt_nodes}
+	\label{fig:fee scheme}
 	\hspace{2mm}
 \end{figure}
 
@@ -76,6 +76,7 @@ Much similar to network theory, Game theory have been difficult to use in empiri
 
 \subsection{Further implementation}
 
+The price model will be to expensive to calculate in the future as the network grows. Instead of an exact calculation upper and lower bounds could be calculated 
 
 
 
