--- a/docs/thesis/lightning.tex
+++ b/docs/thesis/lightning.tex
@@ -49,7 +49,7 @@ Remember that the commitment transactions is reversed for the other party. This 
 	\includegraphics[width=8.5cm]{images/RSMC.png}
 	\caption{\textit{Commitment transactions. 
 	}}
-	\label{fig:merkle:tree}
+	\label{fig:commitment:tx}
 			\hspace*{2mm} 
 \end{figure}
 
@@ -76,7 +76,7 @@ As long as the channel is open Alice and Bob may settle any imbalances between t
 	\includegraphics[width=9cm]{images/RSMC_flow.png}
 	\caption{\textit{Showing the channel balance state between Alice and Bob after the second Commitment transaction has been made. 
 	}}
-	\label{fig:merkle:tree}
+	\label{fig:rsmc_second_commitment}
 		\hspace*{2mm} 
 \end{figure}
 
