--- a/docs/thesis/results.tex
+++ b/docs/thesis/results.tex
@@ -10,7 +10,7 @@ Every simulation is run ten times and the mean and standard deviation($\sigma$) 
 	\includegraphics[width=9cm]{images/histories_deviation.png}
 	\caption{ ...
 	}
-	\label{fig:fee_curve}
+	\label{fig:hist_dev}
 	\hspace*{2mm} 
 \end{figure}
 
@@ -20,7 +20,7 @@ Every simulation is run ten times and the mean and standard deviation($\sigma$) 
 	\includegraphics[width=9cm]{images/histories_deviation_fund.png}
 	\caption{ ...
 	}
-	\label{fig:fee_curve}
+	\label{fig:alloc}
 	\hspace*{2mm} 
 \end{figure}
 
