--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -70,15 +70,20 @@ Segregated Witness When BIP148\cite{bip:148:uasf:segwit}, a \textit{user-activat
 
 Bitcoin Cash received significant economic support initially, although significantly below the original chain.
 
+\begin{figure}[!htb]
+	\hspace*{-0.7cm} 
+	\centering
+	\includegraphics[width=8cm]{images/Bitcoin_Cash_Bitcoin_Price_Ratio.png}
+	\caption{\textit{Historic Bitcoin Cash/Bitcoin price ratio. Data retrieved from Yahoo Finance.}}
+	\label{fig:bch_btc}
+	\hspace*{2mm} 	
+\end{figure}
 
--- Chart over price here --
-
-
-Although support for Bitcoin Cash has dwindled over the following years, it set a precedence of forks may be utilized. During the second half of 2017 many more forks happened similarly to bitcoin cash.
+Although support for Bitcoin Cash has dwindled over the following years, it set a precedence of forks may be utilized. It showed that support from miners . During the second half of 2017 many more forks happened similarly to bitcoin cash.
 
 \subsection{The SegWit2x Compromise}
 
-Most forks are simple copies of bitcoin and may be of little interest here. However SegWit2x carry some historic weight worth noting. 
+Most forks are simple copies of Bitcoin and may be of little interest here. However SegWit2x carry some historic weight worth noting. 
 SegWit2x was originally a compromise 
 
 
